[package]
name = "randword"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = "1.13.1"
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
surf = "2.3.2"
tokio = { version = "1.45.0", features = ["full"] }
